[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/main/FlowSelectName.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=7]
font_path = "res://assets/fonts/Roboto-Bold.ttf"

[sub_resource type="DynamicFont" id=4]
size = 18
use_filter = true
font_data = SubResource( 7 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="FlowSelectName" type="HBoxContainer"]
unique_name_in_owner = true
margin_right = 1024.0
margin_bottom = 22.0
script = ExtResource( 1 )

[node name="LabelFlow" type="LineEdit" parent="."]
unique_name_in_owner = true
margin_right = 955.0
margin_bottom = 22.0
input_pass_on_modal_close_click = false
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_uneditable = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/read_only = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 6 )
text = "Main"
editable = false

[node name="EditButton" type="Button" parent="."]
unique_name_in_owner = true
margin_left = 959.0
margin_right = 1000.0
margin_bottom = 22.0
text = "EDIT"

[node name="ConfirmButton" type="Button" parent="."]
unique_name_in_owner = true
visible = false
margin_left = 795.0
margin_right = 826.0
margin_bottom = 22.0
text = "OK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeleteButton" type="Button" parent="."]
unique_name_in_owner = true
visible = false
margin_left = 899.0
margin_right = 966.0
margin_bottom = 22.0
text = "Delete"

[node name="cancelButton" type="Button" parent="."]
unique_name_in_owner = true
visible = false
margin_left = 970.0
margin_right = 1024.0
margin_bottom = 22.0
text = "Cancel"

[node name="RemoveButton" type="Button" parent="."]
unique_name_in_owner = true
margin_left = 1004.0
margin_right = 1024.0
margin_bottom = 22.0
text = "X"

[connection signal="gui_input" from="LabelFlow" to="." method="_on_LabelFlow_gui_input"]
[connection signal="text_entered" from="LabelFlow" to="." method="_on_LabelFlow_text_entered"]
[connection signal="pressed" from="EditButton" to="." method="_on_EditButton_pressed"]
[connection signal="pressed" from="ConfirmButton" to="." method="_on_ConfirmButton_pressed"]
[connection signal="pressed" from="DeleteButton" to="." method="_on_DeleteButton_pressed"]
[connection signal="pressed" from="cancelButton" to="." method="_on_cancelButton_pressed"]
[connection signal="pressed" from="RemoveButton" to="." method="_on_RemoveButton_pressed"]
